# CROSSANITY

./: CMakeLists.txt  README.md  main.cpp
data/: score_table.txt  word_list.txt
include/: CrosswordGame.hpp  Crosswords.hpp  WordList.hpp  colors.hpp  constants.hpp  crossword.hpp  grid.hpp  scoreboard.hpp  types.hpp  utils.hpp
src/: CrosswordGame.cpp  Crosswords.cpp  WordList.cpp  crossword.cpp  grid.cpp  scoreboard.cpp  utils.cpp
